# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.33.1
	Martin Väth <martin at mvath.de>:
	- Fix meson tests which require dialect arg
	- Use unordered_{map,set} if available (presumably faster)
	- Use emplace, emplace_back, std::move if available (faster)
	- Prefer count() != 0 over find() != end() (presumably faster)
	- Add memory saving flags
	- manpage: more verbose description of eix-postsync

*eix-0.33.0
	Martin Väth <martin at mvath.de>:
	- Provide eix-postsync as a simple eix-sync alternative.
	  To use it with >=portage-2.3.7 create /etc/portage/postsync.d/ and
	  ln -s /usr/bin/eix-postsync /etc/portage/postsync.d/50-eix-postsync
	  After syncing, call eix-diff manually if required
	- Provide a wrapper for eix-function.sh
	- Add support for meson/ninja build system (fast, but less compatible).
	  Probably autotools and meson will both continue to be supported.
	- Make new dialect the default
	- Pass flags to disable dead code. Use --disable-dead-code-elimination
	  (with meson -Ddead-code-elimination=false) to disable this feature.
	- Fix return value in _eix completion. Thanks to
	  Mikael Magnusson <mikachu at gmail.com>
	- Fix option and description typos in configure.ac
	- Replace /etc/make.conf by the new path /etc/portage/make.conf in docs
	- eix-layman help text: Avoid mentioning source commands in make.conf
	  since most users will use nowadays repositories.conf

*eix-0.32.10
	Martin Väth <martin at mvath.de>:
	- Fix subversion guessing without CAREMODE=true
	- Fix wrong prepending of CXXFLAGS and LDFLAGS
	- Fix stress test for C++11 (fixes compilation with clang & gcc++ lib)
	- Fix adding of -fstack-protector-strong and friends
	- Add -fstack-check
	- Fix stress test in ./configure to not spit warning which breaks
	- Fix some sign type conversions
	- Support fallthrough attribute
	- Correctly support mpx with --enable-strong-security if available
	- Fix get_geometry() error check