@@ -7,6 +7,8 @@
 	- Use emplace, emplace_back, std::move if available (faster)
 	- Prefer count() != 0 over find() != end() (presumably faster)
 	- Add memory saving flags
+	- Improve ccache usage (only for meson): Remove version from config.h
+	  (included everywhere) to increase hit rate for upgrades
 	- manpage: more verbose description of eix-postsync
 
 *eix-0.33.0
